--- a/public/Documentation/Documentation.html
+++ b/public/Documentation/Documentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!--    <meta name="viewport" content="width=device-width,initial-scale=1">-->
-    <title>JustFans - Premium content subscription platform | Docs</title>
+    <title>FetishOnly - Premium content subscription platform | Docs</title>
     <link rel="shortcut icon" href="assets/images/rounded-logo-white.svg" type="image/x-icon">
 
     <meta name="author" content="Qdev Techs">
@@ -17,7 +17,7 @@
 
     <script>
         productConfig = {
-            name: 'JustFans - Premium content subscription platform',
+            name: 'FetishOnly - Premium content subscription platform',
             version: '6.3.1'
         }
     </script>
@@ -83,12 +83,12 @@
 
         <!-- Page Content -->
         <div class="main-content col-xl-10 coll-md-10 col-lg-10 col-sm-12 col-12 pt-4 pb-4">
-            <h2 class="pb-4"><span class="appNameLabel">JustFans - Premium content subscription platform</span> | Docs </h2>
+            <h2 class="pb-4"><span class="appNameLabel">FetishOnly - Premium content subscription platform</span> | Docs </h2>
 
             <div id="introduction" class="mb-4">
 
                 <h4 class="pt-2 section-header"><span class="doc-index-label">1.</span> Introduction </h4>
-                <p>Hey, thanks for purchasing <i>"<span class="appNameLabel">JustFans - Premium content subscription platform</span>"</i>. Here you'll find about everything you need in order to get started with launching your app. If you have any questions, don't hesitate do <a href="https://codecanyon.net/user/ic0de" target="_blank"> contact us</a>.</p>
+                <p>Hey, thanks for purchasing <i>"<span class="appNameLabel">FetishOnly - Premium content subscription platform</span>"</i>. Here you'll find about everything you need in order to get started with launching your app. If you have any questions, don't hesitate do <a href="https://codecanyon.net/user/ic0de" target="_blank"> contact us</a>.</p>
             </div>
 
             <div id="requirements" class="mb-4">
@@ -1172,7 +1172,7 @@ which ffmpeg && which ffprobe # To get full exec paths
                 <a href=""><img src="assets/images/rounded-logo-white.svg" alt="Logo" style="width: 60px"></a>
             </div>
             <div class="col-12 col-md-6 text-white">
-                <p class="mb-4">JustFans - Premium content subscription platform | Documentation.</p>
+                <p class="mb-4">FetishOnly - Premium content subscription platform | Documentation.</p>
                 <div class="row">
                     <div class="col">
                         <ul class="list-group list-group-minimal">
